# ridge_significance_sparse

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: __init__.py
data/sample_data/: infection_GSE147507_meta.csv  output.permutation.beta.npy  output.permutation.pvalue.npy  output.permutation.se.npy  output.permutation.zscore.npy  output.t.pvalue.npy  output.t.se.npy  output.t.zscore.npy  test
datasets/: GSE100093.IFNG.expr.feather
docs/: Makefile  conf.py  dashboard.rst  index.rst  modules.rst  ridge_inference.batch.rst  ridge_inference.c_bindings.rst  ridge_inference.core.rst  ridge_inference.inference.rst  ridge_inference.logit.rst  ridge_inference.ridge.rst  ridge_inference.rst  ridge_inference.utils.rst
docs/_static/: custom.css
docs/api/: batch.rst  c_bindings.rst  core.rst  inference.rst  logit.rst  ridge.rst  utils.rst
docs/examples/: advanced_usage.rst  basic_usage.rst  visualization.rst
docs/user_guide/: backends.rst  batch_processing.rst  installation.rst  performance_tips.rst  ridge_math.rst
examples/: basic_ridge.py  inference_example.py  logistic_regression.py  sparse_matrix_example.py
ridge_inference/: __init__.py  backend_selection.py  batch.py  cli.py  core.py  inference.py  loaders.py  logit.py  ridge.py  ridge_gsl.pyx  ridge_mkl.pyx  utils.py
scripts/: preprocess_dense_to_sparse.py
src/: Makefile  README.md  main_gsl.c  main_mkl.c  ridge_gsl.c  ridge_gsl.h  ridge_mkl.c  ridge_mkl.h
tests/: __init__.py  simple_test.py  test_inference.py  test_ridge.py  test_t_test.py
